@@ -55,6 +55,8 @@
 #define IDSC_XMLSAVEFAILURE             3051
 #define IDSC_SAXERRORPWH                3052
 #define IDSC_SAXGENERROR                3053
+#define IDSC_EXPHDRGROUP                3054
+#define IDSC_EXPHDRTITLE                3055
                                         
 #define IDSC_FILEEXCEPTION00            3100
 #define IDSC_FILEEXCEPTION01            3101
