@@ -31,6 +31,7 @@ considered empty fields.
 [1751465] Fields containing only whitespace or whitespace between double quotes
 are now treated as empty during plain text import.
 [1783905] Read-only status maintained after unlocking a database.
+[1782407] Export to text file now includes "title", if selected.
 
 New Features for 3.10
 =====================
